--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'E151'
 - !lcsh 'United States -- Description and travel'
+- GITenberg
 title: Impressions of America
 url: http://www.gutenberg.org/ebooks/41806
